[gd_scene load_steps=4 format=3 uid="uid://b35i88psqyrfu"]

[ext_resource type="Script" path="res://scripts/dialog_node.gd" id="1_vpqec"]
[ext_resource type="Texture2D" uid="uid://d0ab7nn3kjc4g" path="res://textures/no_character.svg" id="2_oba1f"]
[ext_resource type="Texture2D" uid="uid://rq7uiu1vsio" path="res://textures/dialog.svg" id="2_pa8bf"]

[node name="DialogNode" type="GraphNode"]
offset_right = 400.0
offset_bottom = 300.0
resizable = true
title = "Dialog Node"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_vpqec")
node_icon = ExtResource("2_pa8bf")

[node name="SpeakerSelector" type="MenuButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("2_oba1f")

[node name="Lines" type="PanelContainer" parent="."]
layout_mode = 2

[node name="LinesList" type="VBoxContainer" parent="Lines"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddLineButton" type="Button" parent="Lines/LinesList"]
layout_mode = 2
tooltip_text = "Add another line. Each line will be displayed separatly."
theme_override_font_sizes/font_size = 24
text = "+"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="AddOptionButton" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Add an option that the player can choose after the dialog"
theme_override_font_sizes/font_size = 24
text = "+"

[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="pressed" from="Lines/LinesList/AddLineButton" to="." method="_on_add_line_button_pressed"]
[connection signal="pressed" from="AddOptionButton" to="." method="_on_add_option_button_pressed"]
